map place holder and edit css

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -44,3 +44,11 @@
         height: 100px;
         width: 350px;
     }
+
+    #results {
+        border: solid;
+        height: 500px;
+        width: 500px;
+        float: right;
+        
+    }
