--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -116,7 +116,7 @@ button {
 }
 
 
-    #0 {
+    /* #0 {
     border-radius: 20%;
     border: solid;
     border-color: var(--myellow);
@@ -151,6 +151,6 @@ button {
     border: solid;
     border-color: var(--myellow);
     border: size 10px;
-   }
+   } */
 
 
