added hover to images

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -51,7 +51,6 @@
 
     }
     .near-you {
-    border: solid;
     font-size: 59px;
     /* font-stretch: 0 0 8% 0; */
     color: var(--mred);
@@ -111,7 +110,12 @@ button {
         height: 100px;
         width: 350px;
     }
-
+    .random-img-div {
+        object-fit: contain;
+    }
+    .random-img-div:hover {
+        opacity: 50%;
+    }
 
     #results {
         border: solid;
@@ -126,7 +130,7 @@ button {
 }
 
 
-    /* #0 {
+    #0 {
     border-radius: 20%;
     border: solid;
     border-color: var(--myellow);
@@ -161,7 +165,7 @@ button {
     border: solid;
     border-color: var(--myellow);
     border: size 10px;
-   } */
+   }
 
 
 
