--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,190 +1,93 @@
 :root {
-    --myellow:#f4bf44;
+    --myellow: #f4bf44;
     --mred: #cc2b1f;
     --mwhite: #f5f1e7;
-    }
-    *{
-        background-color: var(--myellow);
-        color: var(--mred);
-        font-family: "monoton";
-        position: relative;
-    }
-    body {
-        background-color: var(--myellow);
-    }
+}
 
+body {
+    background-color: var(--myellow);
+}
 
-    .title-text:hover {
-        color: var(--mwhite); 
-        }
-    .title-text {
-        font-size: 90px;
-        /* need to replace the margin left wither with a center,flex or bootstrap */
-        margin-left: 450px;
-    }
-    
-    .background-image {
-        border-color: var(--mwhite);
-        border:10px solid;
-        border-width: 40px;
-        display: flex;
-        opacity: .80;
-        border-radius: 1%;
-        /* padding: 5px; */
-        /* margin: auto; */
-        /* height: 200px; */
-        /* width: 200px; */
-    }
-    .map{  
-    font-size: 70px;
+* {
+    background-color: var(--myellow);
     color: var(--mred);
-    margin-left: 500px;
-    margin-bottom: 16px;
-    border: solid;
-    border-color: var(--mred);
-    border-radius:  20px;
-    border-width: 5px;
-    height: 100px;
-    width: 350px;
-    z-index: 3;
-    margin-top: 20px;
-
-    }
-    .near-you {
-
-    /* border: solid; */
-
-
-    font-size: 59px;
-    /* font-stretch: 0 0 8% 0; */
-    color: var(--mred);
-    padding-top: -17px;
-    padding: .1px;
-    margin-left: 600px;
-    border-color: var(--mred);
-    border-radius:  20px;
-    border-width: 5px;
-    color: var(--mred);
-    height: 100px;
-    width: 350px;
-    z-index: 3;
-    margin-top: 20px;
+    font-family: "monoton";
 }
-.what-to-eat:hover {
-    color: var(--mwhite); 
-    }
-.what-to-eat {
-    font-size: 46px;
-    z-index: 2;
-    height: 100px;
-    width: 650px;
-    margin-left: 500px;
-}   
-.choices:hover {
-    color: var(--mwhite); 
-    }
-.choices {
-    font-size: 46px;
-    border-color: var(--mred);
-    border-radius:  20px;
-    height: 100px;
-    width: 650px;
+
+h1 {
+    font-size: calc(4.375rem + 1.5vw);
+    /* change the rem value if we want to change the size */
 }
-.still {
-    font-size: 56px;
-    height:300px;
-    width: 600px;
-    margin-right: 180px;
-}
-.map{
-    height:300px;
-    width: 600px;
-}
+
 button {
-        font-family: "monoton";
-        position:relative;
-        font-size: 40px;
-        background-color: var(--myellow);
-        color: var(--mred);
-        margin-left: 500px;
-        border-color: var(--mred);
-        border-radius:  20px;
-        border-width: 5px;
-        color: var(--mred);
-        height: 100px;
-        width: 350px;
-    }
-    .random-img-div {
-        object-fit: contain;
-    }
-    .random-img-div:hover {
-        opacity: 50%;
-    }
-
-    #results {
-        border: solid;
-        height: 500px;
-        width: 500px;
-        float: right;
-        
-    }
-
-.row {
-    margin: 400px;
+    font-family: "monoton";
+    font-size: 5vw;
+    background-color: var(--myellow);
+    color: var(--mred);
+    border-color: var(--mred);
+    border-radius: 20px;
+    border-width: 5px;
+    color: var(--mred);
 }
 
-#top-five-results {
-    border: solid;
-    height: 600px;
-    width: 600px;
-    float: right;
-    margin-right: 200px;
+.choices-button{
+    display: none;
+    margin: 0 auto;
 }
 
-.still {
-    display: inline-block;
+.what-to-eat-div {
+    border-radius: 20px;
 }
 
-.random-img {
-    width: 200px;
+.what-to-eat:hover {
+    color: var(--mwhite);
 }
 
-    #0 {
-    border-radius: 20%;
-    border: solid;
-    border-color: var(--myellow);
-    border: size 10px;
-    }
-    #1 {
-    border-radius: 20%;
-    border: solid;
-    border-color: var(--myellow);
-    border: size 10px;
-    }
-    #2 {
-    border-radius: 20%;
-    border: solid;
-    border-color: var(--myellow);
-    border: size 10px;
-    }
-   #3 {
-    border-radius: 20%;
-    border: solid;
-    border-color: var(--myellow);
-    border: size 10px;
-   }
-   #4 {
-    border-radius: 20%;
-    border: solid;
-    border-color: var(--myellow);
-    border: size 10px;
-    }
-   #5 {
-    border-radius: 20%;
-    border: solid;
-    border-color: var(--myellow);
-    border: size 10px;
-   }
 
 
 
+/* TODO: style this */
+/* .top-five-results-container{
+
+} */
+
+.still-hungry-link{
+    text-decoration: none;
+    color:#cc2b1f;
+    font-size: 2rem;
+}
+
+@media screen and (max-width: 1024px) {}
+
+@media screen and (max-width: 767px) {
+main{
+    margin-bottom: 20px;
+}
+.choices-button{
+    margin: 0 auto 20px;
+}
+}
+
+@media screen and (max-width: 442px) {
+
+    /* good until around 310px */
+    h1 {
+        font-size: calc(3.375rem + 1.5vw);
+    }
+
+    button {
+        font-size: 8vw;
+        margin-bottom: 40px;
+    }
+
+    .what-to-eat-div {
+        top: 0%!important;
+        margin-top: 20px;
+        text-align: center;
+        position: static!important;
+        transform: translate(0%, 0%)!important;
+        left: 0%!important;
+    }
+
+
+}
