style list of restaurants

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -95,3 +95,13 @@ main{
 
 
 }
+
+.list {
+    font-size: 30px;
+    word-spacing: 20px;
+    letter-spacing: 2px;
+}
+
+.near-you-title {
+    font-size: 100px;
+}
