--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,6 +33,7 @@ button, a.button {
 .random-img-div:hover {
     opacity: 75%;
     border-color: var(--mred);
+    cursor: pointer;
 }
 .random-img-div {
     border-width: 2px;
@@ -41,6 +42,7 @@ button, a.button {
 }
 .result-item:hover {
     opacity: 75%;
+    pointer-events: visible;
 }
 
 .choices-button{
