update image paths

--- a/views/index.html
+++ b/views/index.html
@@ -68,8 +68,8 @@
   </div>
 
     <!-- big image beneath the header -->
-    <main class="backgound-image-container position-relative"><img id="background-image" class="img-fluid"
-        src="./assets/images/food-background.jpg" alt="Looking down on a bunch of delicious looking food" srcset="">
+    <main class="backgound-image-container position-relative"><img id="/images/background-image" class="img-fluid"
+        src="/images/food-background.jpg" alt="Looking down on a bunch of delicious looking food" srcset="">
     <div class="what-to-eat-div what-to-eat-sm position-absolute top-50 start-50 translate-middle">
         <a href="#random-img-container" class="what-to-eat button">What to Eat?</a>
     </div>
